@@ -9,6 +9,8 @@ kotlin {
         namespace = "io.github.magisk317.mipush.runtime.store.kmp"
         compileSdk = libs.versions.compileSdk.get().toInt()
         minSdk = libs.versions.minSdk.get().toInt()
+        withHostTest {
+        }
     }
 
     compilerOptions {
@@ -25,10 +27,19 @@ kotlin {
 
 dependencies {
     add("kspAndroid", libs.androidx.room.compiler)
+    add("androidHostTestImplementation", libs.junit.jupiter)
+    add("androidHostTestImplementation", "androidx.sqlite:sqlite-bundled-jvm:${libs.versions.sqlite.get()}")
+    add("androidHostTestRuntimeOnly", libs.junit.platform.launcher)
 }
 
 ksp {
     arg("room.schemaLocation", layout.projectDirectory.dir("schemas").asFile.absolutePath)
     arg("room.incremental", "true")
     arg("room.generateKotlin", "true")
+}
+
+
+tasks.withType<Test>().configureEach {
+    useJUnitPlatform()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
